# qml_chat_client

./: AuthController.cpp  AuthController.h  CMakeLists.txt  ChatController.cpp  ChatController.h  README.md  apiservice.cpp  apiservice.h  main.cpp  qml.qrc
ui/: Main.qml
ui/Auth/: AuthPage.qml  LoginPage.qml  RegisterPage.qml
ui/Chat/: ChatList.qml  ChatPage.qml  MainView.qml
